Add sidebar right border

--- a/Arc/styles/arc-variables.less
+++ b/Arc/styles/arc-variables.less
@@ -12,6 +12,7 @@
 @colorWarningBar: darken(@colorWindowBg, 5%);
 
 @colorSidebarBg: #353945;
+@colorSidebarBorder: #353945;
 @colorSidebarItemHover: rgba(186, 195, 207, 0.15);
 @colorSidebarText: #bac3cf;
 @colorSidebarTextFaded: fade(@colorSidebarText, 50%);
