--- a/Arc/styles/sidebar-toolbar.less
+++ b/Arc/styles/sidebar-toolbar.less
@@ -17,6 +17,7 @@ body.platform-linux .sheet-toolbar-container {
 .toolbar-RootSidebar {
 	height: 100%;
 	background-color: @colorSidebarBg;
+	border-right: 1px solid @colorSidebarBorder;
 
 	//---------------------------------
 	// New email button
