--- a/Arc/styles/sidebar.less
+++ b/Arc/styles/sidebar.less
@@ -5,7 +5,12 @@
 //------------------------------------------------------------
 .column-RootSidebar {
 	background-color: @colorSidebarBg;
+	border-right: 1px solid @colorSidebarBorder;
 	padding-top: 12px;
+
+	.flexbox-handle-horizontal div {
+		box-shadow: none;
+	}
 }
 
 .account-sidebar {
