Arc-Lighter: theme colors

--- a/Arc-Lighter/styles/arc-variables.less
+++ b/Arc-Lighter/styles/arc-variables.less
@@ -11,11 +11,11 @@
 @colorTextFaded: fade(@colorText, 50%);
 @colorWarningBar: darken(@colorWindowBg, 5%);
 
-@colorSidebarBg: #353945;
-@colorSidebarBorder: #353945;
-@colorSidebarItemHover: rgba(186, 195, 207, 0.15);
-@colorSidebarText: #bac3cf;
-@colorSidebarTextFaded: fade(@colorSidebarText, 50%);
+@colorSidebarBg: #f5f6f7;
+@colorSidebarBorder: @colorBorder;
+@colorSidebarItemHover: rgba(92, 97, 108, 0.15);
+@colorSidebarText: @colorText;
+@colorSidebarTextFaded: @colorTextFaded;
 @colorSidebarTextLighter: lighten(@colorSidebarText, 5%);
 @colorSidebarTextActive: #ffffff;
 
