Arc-Lighter: new email button

--- a/Arc-Lighter/styles/sidebar-toolbar.less
+++ b/Arc-Lighter/styles/sidebar-toolbar.less
@@ -35,8 +35,8 @@ body.platform-linux .sheet-toolbar-container {
 		}
 
 		&:hover {
-			background-color: @colorBtnBgDark;
-			border-color: @colorBtnBorderDark;
+			background-color: @colorBtnBgLight;
+			border-color: @colorBtnBorderLight;
 
 			img.content-mask {
 				background-color: @colorSidebarText;
@@ -44,8 +44,8 @@ body.platform-linux .sheet-toolbar-container {
 		}
 
 		&:active {
-			background-color: @colorBtnBgActiveDark;
-			border-color: @colorBtnBorderActiveDark;
+			background-color: @colorBtnBgActiveLight;
+			border-color: @colorBtnBorderActiveLight;
 
 			img.content-mask{
 				background-color: @colorBtnTextActive;
@@ -63,8 +63,8 @@ body.platform-linux .sheet-toolbar-container {
 			}
 
 			&:hover {
-				background-color: @colorBtnBgDark;
-				border-color: @colorBtnBorderDark;
+				background-color: @colorBtnBgLight;
+				border-color: @colorBtnBorderLight;
 			}
 		}
 	}
