Arc-Lighter: sidebar scrollbar

--- a/Arc-Lighter/styles/sidebar.less
+++ b/Arc-Lighter/styles/sidebar.less
@@ -297,7 +297,7 @@
 	width: 10px;
 
 	.scrollbar-handle {
-		background: fade(lighten(@colorSidebarBg, 50%), 40%);
+		background: fade(darken(@colorSidebarBg, 45%), 40%);
 		border: none;
 	}
 }
