--- a/Arc-Dark/styles/arc-variables.less
+++ b/Arc-Dark/styles/arc-variables.less
@@ -3,24 +3,24 @@
 //------------------------------------------------------------
 @colorAccent: #5294e2;
 
-@colorWindowBg: #f6f7f8;
-@colorBodyBg: #ffffff;
+@colorWindowBg: #383c4a;
+@colorBodyBg: #404552;
 @colorBodyBgDarker: darken(@colorBodyBg, 2%);
-@colorBorder: #d4d5db;
-@colorText: #231f20;
+@colorBorder: #262a33;
+@colorText: #bac3cf;
 @colorTextFaded: fade(@colorText, 50%);
 @colorWarningBar: darken(@colorWindowBg, 5%);
 
 @colorSidebarBg: #353945;
-@colorSidebarBorder: #353945;
+@colorSidebarBorder: #2a2d37;
 @colorSidebarItemHover: rgba(186, 195, 207, 0.15);
 @colorSidebarText: #bac3cf;
 @colorSidebarTextFaded: fade(@colorSidebarText, 50%);
 @colorSidebarTextLighter: lighten(@colorSidebarText, 5%);
 @colorSidebarTextActive: #ffffff;
 
-@colorListBg: #ffffff;
-@colorListItemHover: tint(@colorSidebarBg, 90%);
+@colorListBg: #404552;
+@colorListItemHover: lighten(@colorListBg, 3%);
 @colorListText: @colorText;
 @colorListTextActive: #ffffff;
 @colorListTextActiveFaded: fade(@colorListTextActive, 50%);
