Arc-Dark: fix message list background

--- a/Arc-Dark/styles/messagelist.less
+++ b/Arc-Dark/styles/messagelist.less
@@ -9,6 +9,10 @@
 	padding-top: 12px;
 }
 
+#message-list {
+	background: @colorWindowBg;
+}
+
 #message-list .messages-wrap .scroll-region-content-inner {
 	padding: 0 20px;
 }
