Arc-Dark: remove thread list separator box shadow

--- a/Arc-Dark/styles/threadlist.less
+++ b/Arc-Dark/styles/threadlist.less
@@ -1,6 +1,15 @@
 @import "arc-variables";
 
 //------------------------------------------------------------
+// Thread list
+//------------------------------------------------------------
+.column-ThreadList {
+	.flexbox-handle-horizontal div {
+		box-shadow: none;
+	}
+}
+
+//------------------------------------------------------------
 // Thread list items
 //------------------------------------------------------------
 .thread-list .list-item {
