--- a/Arc-Dark/styles/threadlist-toolbar.less
+++ b/Arc-Dark/styles/threadlist-toolbar.less
@@ -13,6 +13,7 @@
 // Search box
 //------------------------------------------------------------
 .thread-search-bar {
+	background: rgba(0, 0, 0, 0);
 	box-shadow: none;
 	padding-left: 9px;
 
