Arc-Dark: fix message list toolbar buttons

--- a/Arc-Dark/styles/arc-variables.less
+++ b/Arc-Dark/styles/arc-variables.less
@@ -25,10 +25,10 @@
 @colorListTextActive: #ffffff;
 @colorListTextActiveFaded: fade(@colorListTextActive, 50%);
 
-@colorBtnBgLight: #ffffff;
-@colorBtnBorderLight: #cfd6e6;
+@colorBtnBgLight: #505666;
+@colorBtnBorderLight: #2b2e39;
 @colorBtnBgActiveLight: @colorAccent;
-@colorBtnBorderActiveLight: @colorAccent;
+@colorBtnBorderActiveLight: #2b2e39;
 
 @colorBtnBgDark: #505666;
 @colorBtnBorderDark: #2b2e39;
