--- a/Arc-Dark/styles/messagelist-toolbar.less
+++ b/Arc-Dark/styles/messagelist-toolbar.less
@@ -16,6 +16,10 @@
 		border-radius: 3px !important;
 		height: 26px;
 
+		img.content-mask {
+			background-color: @colorText;
+		}
+
 		&:hover {
 			border-color: @colorBtnBorderLight !important;
 			background-color: @colorBtnBgLight;
