Arc-Dark: fix message list warning bar colors

--- a/Arc-Dark/styles/arc-variables.less
+++ b/Arc-Dark/styles/arc-variables.less
@@ -9,7 +9,7 @@
 @colorBorder: #262a33;
 @colorText: #bac3cf;
 @colorTextFaded: fade(@colorText, 50%);
-@colorWarningBar: darken(@colorWindowBg, 5%);
+@colorWarningBar: lighten(@colorBodyBg, 2%);
 
 @colorSidebarBg: #353945;
 @colorSidebarBorder: #2a2d37;
