--- a/Arc-Dark/styles/messagelist.less
+++ b/Arc-Dark/styles/messagelist.less
@@ -422,6 +422,7 @@
 	border-left: 3px solid @colorAccent;
 	border-radius: 0px;
 	background-color: @colorWarningBar;
+	color: @colorTextFaded;
 
 	a {
 		color: @colorAccent;
