Arc-Dark: fix thread list background

--- a/Arc-Dark/styles/common.less
+++ b/Arc-Dark/styles/common.less
@@ -4,7 +4,11 @@
 // Main window
 //------------------------------------------------------------
 .sheet-container {
-	border-top: 1px solid @colorBorder;	
+	border-top: 1px solid @colorBorder;
+}
+
+.sheet {
+	background-color: @colorListBg;
 }
 
 //------------------------------------------------------------
