Arc-Dark: fix preferences background/tabs

--- a/Arc-Dark/styles/arc-variables.less
+++ b/Arc-Dark/styles/arc-variables.less
@@ -43,7 +43,7 @@
 @colorBtnTextActive: #ffffff;
 
 @colorPrefsWindowBg: @colorWindowBg;
-@colorPrefsBodyBg: #ffffff;
+@colorPrefsBodyBg: @colorBodyBg;
 @colorPrefsTabHover: fade(@colorPrefsBodyBg, 60%);
 @colorPrefsTabActive: @colorPrefsBodyBg;
 
