--- a/Arc-Dark/styles/preferences.less
+++ b/Arc-Dark/styles/preferences.less
@@ -81,7 +81,7 @@ body.platform-linux .sheet-toolbar-container[data-id="Preferences"] {
 				border-color: @colorBorder;
 
 				.name {
-					color: colorTextFaded;
+					color: @colorTextFaded;
 				}
 			}
 
