--- a/Arc-Dark/styles/preferences.less
+++ b/Arc-Dark/styles/preferences.less
@@ -22,11 +22,13 @@ body.platform-linux .sheet-toolbar-container[data-id="Preferences"] {
 
 	img.content-mask {
 		zoom: 0.3 !important;
+		background-color: @colorText;
 	}
 
 	.item-back-title {
 		margin: 1px 2px 0 3px;
 		font-size: 14px;
+		color: @colorText;
 	}
 
 	&:hover {
