Arc-Dark: fix preferences text colors (identity/shortcut tabs)

--- a/Arc-Dark/styles/preferences.less
+++ b/Arc-Dark/styles/preferences.less
@@ -111,6 +111,18 @@ body.platform-linux .sheet-toolbar-container[data-id="Preferences"] {
 	.preferences-content {
 		background-color: @colorPrefsBodyBg;
 	}
+
+	.container-identity .identity-content-box {
+		color: @colorText;
+	}
+
+	.container-keymaps .shortcut {
+		color: fade(@colorText, 80%);
+
+		.values {
+			color: @colorText
+		}
+	}
 }
 
 //---------------------------------
