Arc-Dark: fix preferences headers bottom border color

--- a/Arc-Dark/styles/preferences.less
+++ b/Arc-Dark/styles/preferences.less
@@ -146,7 +146,7 @@ body.platform-linux .sheet-toolbar-container[data-id="Preferences"] {
 	font-size: 13px;
 	text-transform: uppercase;
 	color: @colorTextFaded;
-	border-bottom: 1px solid @colorBorder;
+	border-bottom: 1px solid fade(@colorText, 30%);
 	padding-bottom: 3px;
 }
 
@@ -156,7 +156,7 @@ body.platform-linux .sheet-toolbar-container[data-id="Preferences"] {
 	font-weight: bold;
 	text-transform: uppercase;
 	color: @colorTextFaded;
-	border-bottom: 1px solid @colorBorder;
+	border-bottom: 1px solid fade(@colorText, 30%);
 	margin: 20px 0px 10px;
 	padding-bottom: 3px;
 }
