Arc-Dark: fix preferences checkboxes

--- a/Arc-Dark/styles/arc-variables.less
+++ b/Arc-Dark/styles/arc-variables.less
@@ -47,7 +47,7 @@
 @colorPrefsTabHover: fade(@colorPrefsBodyBg, 60%);
 @colorPrefsTabActive: @colorPrefsBodyBg;
 
-@colorCheckboxBorder: #a6adbc;
+@colorCheckboxBorder: #7a7f8e;
 
 // @colorWarningRed: #ed304b;
 // @colorWarningYellow: #ed8830;
