Arc-Dark: fix thread list icons (draft)

--- a/Arc-Dark/styles/threadlist-icons.less
+++ b/Arc-Dark/styles/threadlist-icons.less
@@ -32,6 +32,24 @@
 	}
 
 	//---------------------------------
+	// Draft icon
+	//---------------------------------
+	.draft-icon {
+		.arc-threadlist-icon(url(../static/images/thread-list/icon-draft-pencil@2x.png), @colorText);
+		zoom: 1 !important;
+		width: 26px;
+		height: 24px;
+		padding-top: 24px;
+	}
+
+	&.focused,
+	&.selected {
+		.draft-icon {
+			background-color: @colorListTextActive;
+		}
+	}
+
+	//---------------------------------
 	// Replied/forwarded icons
 	//---------------------------------
 	.thread-icon.thread-icon-replied {
