Arc-Dark: fix draft toolbar colors

--- a/Arc-Dark/styles/draftlist-toolbar.less
+++ b/Arc-Dark/styles/draftlist-toolbar.less
@@ -23,6 +23,11 @@
 		border: 1px solid transparent;
 		border-radius: 3px;
 		height: 26px;
+		color: @colorText;
+
+		img.content-mask {
+			background-color: @colorText;
+		}
 
 		&:hover {
 			background: @colorBtnBgLight;
