Arc-Dark: fix draft list text colors

--- a/Arc-Dark/styles/draftlist.less
+++ b/Arc-Dark/styles/draftlist.less
@@ -18,6 +18,7 @@
 .draft-list .list-container .list-item {
 	background-color: @colorListBg;
 	border-bottom: 1px solid @colorBorder;
+	color: @colorText;
 
 	.checkmark .inner {
 		border: 1px solid @colorCheckboxBorder;
