Arc-Dark: fix draft toolbar borders

--- a/Arc-Dark/styles/draftlist-toolbar.less
+++ b/Arc-Dark/styles/draftlist-toolbar.less
@@ -12,6 +12,7 @@
 
 	.selection-bar .absolute {
 		background: @colorWindowBg;
+		border-color: @colorWindowBg;
 	}
 
 	//---------------------------------
