--- a/Arc-Dark/styles/threadlist-icons.less
+++ b/Arc-Dark/styles/threadlist-icons.less
@@ -16,19 +16,31 @@
 //------------------------------------------------------------
 // Thread list icons
 //------------------------------------------------------------
-.thread-list,
+.thread-list {
+	//---------------------------------
+	// Attachment icon
+	//---------------------------------
+	.list-container .list-item {
+		.thread-icon.thread-icon-attachment {
+			.arc-threadlist-icon(url(../static/images/thread-list/icon-attachment-@2x.png), @colorText);
+		}
+
+		&.focused,
+		&.selected {
+			.thread-icon.thread-icon-attachment {
+				background-color: @colorListTextActive;
+			}
+		}
+	}
+}
+
 .draft-list {
 	//---------------------------------
 	// Attachment icon
 	//---------------------------------
-	.thread-icon.thread-icon-attachment {
-		.arc-threadlist-icon(url(../static/images/thread-list/icon-attachment-@2x.png), @colorText);
-	}
-
-	&.focused,
-	&.selected {
+	.list-container .list-item {
 		.thread-icon.thread-icon-attachment {
-			background-color: @colorListTextActive;
+			.arc-threadlist-icon(url(../static/images/thread-list/icon-attachment-@2x.png), @colorText);
 		}
 	}
 }
