Arc-Dark: sidebar code cleanup

--- a/Arc-Dark/styles/arc-variables.less
+++ b/Arc-Dark/styles/arc-variables.less
@@ -1,6 +1,29 @@
 //------------------------------------------------------------
 // Color variables
 //------------------------------------------------------------
+
+//---------------------------------
+// Accent
+//---------------------------------
+@clrAccent: #5294e2;
+
+//---------------------------------
+// Sidebar
+//---------------------------------
+@clrSidebarBg: #353945;
+@clrSidebarBorder: #2a2d37;
+@clrSidebarHover: rgba(186, 195, 207, 0.15);
+@clrSidebarText: #bac3cf;
+@clrSidebarTextFaded: fade(@colorSidebarText, 50%);
+@clrSidebarTextActive: #ffffff;
+@clrSidebarBgActivity: darken(@colorSidebarBg, 5%);
+@clrSidebarTextActivity: @colorSidebarText;
+@clrSidebarScrollbar: #8a8e96;
+@clrWarningRed: #f04a50;
+@clrWarningYellow: #f27835;
+
+
+
 @colorAccent: #5294e2;
 
 @colorWindowBg: #383c4a;
