Arc-Dark: sidebar toolbar code cleanup

--- a/Arc-Dark/styles/arc-variables.less
+++ b/Arc-Dark/styles/arc-variables.less
@@ -19,8 +19,35 @@
 @clrSidebarBgActivity: darken(@colorSidebarBg, 5%);
 @clrSidebarTextActivity: @colorSidebarText;
 @clrSidebarScrollbar: #8a8e96;
+
 @clrWarningRed: #f04a50;
 @clrWarningYellow: #f27835;
+
+@clrSidebarBtnBgHover: rgba(95, 105, 127, 0.37);
+@clrSidebarBtnBorderHover: rgba(21, 23, 28, 0.37);
+@clrSidebarBtnBgActive: @clrAccent;
+@clrSidebarBtnBorderActive: @clrAccent;
+@clrSidebarBtnText:rgba(207, 218, 231, 0.8);
+@clrSidebarBtnTextActive: #ffffff;
+
+//---------------------------------
+// Window
+//---------------------------------
+@clrWindowBg: #383c4a;
+@clrWindowBorder: #262a33;
+@clrText: #bac3cf;
+@clrTextFaded: fade(@clrText, 50%);
+
+//---------------------------------
+// Lists / Threadlist
+//---------------------------------
+@clrListBg: #404552;
+@clrListHover: lighten(@clrListBg, 3%);
+@clrListText: @clrText;
+@clrListTextFaded: @clrTextFaded;
+@clrListTextActive: #ffffff;
+@clrListTextActiveFaded: fade(@clrListTextActive, 50%);
+@clrListScrollbar: #767b87;
 
 
 
