--- a/Arc-Dark/styles/arc-variables.less
+++ b/Arc-Dark/styles/arc-variables.less
@@ -37,6 +37,7 @@
 @clrWindowBorder: #262a33;
 @clrText: #bac3cf;
 @clrTextFaded: fade(@clrText, 50%);
+@clrTextFadedLess: fade(@clrText, 80%);
 
 //---------------------------------
 // Lists / Threadlist
@@ -45,6 +46,7 @@
 @clrListHover: lighten(@clrListBg, 3%);
 @clrListText: @clrText;
 @clrListTextFaded: @clrTextFaded;
+@clrListTextFadedLess: @clrTextFadedLess;
 @clrListTextActive: #ffffff;
 @clrListTextActiveFaded: fade(@clrListTextActive, 50%);
 @clrListScrollbar: #767b87;
