--- a/Arc-Dark/styles/arc-variables.less
+++ b/Arc-Dark/styles/arc-variables.less
@@ -50,6 +50,7 @@
 @clrListTextActive: #ffffff;
 @clrListTextActiveFaded: fade(@clrListTextActive, 50%);
 @clrListScrollbar: #767b87;
+@clrListWarningBar: lighten(@clrListBg, 10%);
 
 
 
