Arc-Dark: message list toolbar code cleanup

--- a/Arc-Dark/styles/arc-variables.less
+++ b/Arc-Dark/styles/arc-variables.less
@@ -39,6 +39,13 @@
 @clrTextFaded: fade(@clrText, 50%);
 @clrTextFadedLess: fade(@clrText, 80%);
 
+@clrBtnBgHover: rgba(95, 105, 127, 0.37);
+@clrBtnBorderHover: rgba(21, 23, 28, 0.37);
+@clrBtnBgActive: @clrAccent;
+@clrBtnBorderActive: @clrAccent;
+@clrBtnText:rgba(207, 218, 231, 0.8);
+@clrBtnTextActive: #ffffff;
+
 //---------------------------------
 // Lists / Threadlist
 //---------------------------------
