Arc-Dark: delete old color variables (sidebar)

--- a/Arc-Dark/styles/arc-variables.less
+++ b/Arc-Dark/styles/arc-variables.less
@@ -14,10 +14,10 @@
 @clrSidebarBorder: #2a2d37;
 @clrSidebarHover: rgba(186, 195, 207, 0.15);
 @clrSidebarText: #bac3cf;
-@clrSidebarTextFaded: fade(@colorSidebarText, 50%);
+@clrSidebarTextFaded: fade(@clrSidebarText, 50%);
 @clrSidebarTextActive: #ffffff;
-@clrSidebarBgActivity: darken(@colorSidebarBg, 5%);
-@clrSidebarTextActivity: @colorSidebarText;
+@clrSidebarBgActivity: darken(@clrSidebarBg, 5%);
+@clrSidebarTextActivity: @clrSidebarText;
 @clrSidebarScrollbar: #8a8e96;
 
 @clrWarningRed: #f04a50;
@@ -72,12 +72,6 @@
 @colorWarningBar: lighten(@colorBodyBg, 5%);
 
 @colorSidebarBg: #353945;
-@colorSidebarBorder: #2a2d37;
-@colorSidebarItemHover: rgba(186, 195, 207, 0.15);
-@colorSidebarText: #bac3cf;
-@colorSidebarTextFaded: fade(@colorSidebarText, 50%);
-@colorSidebarTextLighter: lighten(@colorSidebarText, 5%);
-@colorSidebarTextActive: #ffffff;
 
 @colorListBg: #404552;
 @colorListItemHover: lighten(@colorListBg, 3%);
