Arc-Dark: draft list code cleanup

--- a/Arc-Dark/styles/arc-variables.less
+++ b/Arc-Dark/styles/arc-variables.less
@@ -59,6 +59,14 @@
 @clrListScrollbar: #767b87;
 @clrListWarningBar: lighten(@clrListBg, 10%);
 
+//---------------------------------
+// Controls
+//---------------------------------
+@clrCheckboxBg: #2d323d;
+@clrCheckboxBorder: #262934;
+@clrCheckboxBgActive: @clrAccent;
+@clrCheckboxBorderActive: @clrAccent;
+
 
 
 @colorAccent: #5294e2;
