--- a/Arc-Dark/styles/threadlist-toolbar.less
+++ b/Arc-Dark/styles/threadlist-toolbar.less
@@ -83,10 +83,10 @@
 
 			&.selected {
 				background-color: @clrAccent;
-				color: @colorListTextActive;
+				color: @clrListTextActive;
 
 				.suggestion-token {
-					color: @colorListTextActive;
+					color: @clrListTextActive;
 				}
 			}
 
